--- a/TradeHubGui/Views/OrdersView.xaml
+++ b/TradeHubGui/Views/OrdersView.xaml
@@ -201,20 +201,11 @@
                               RowHeight="22">
 
                         <DataGrid.Columns>
-                            <DataGridTextColumn Header="Order ID" Width="0.22*" Binding="{Binding Path=ID}" />
-                            <DataGridTextColumn Header="Side" Width="0.15*" Binding="{Binding Path=Side}" />
-                            <DataGridTextColumn Header="Price" Width="0.2*" Binding="{Binding Path=Price}" />
-                            <DataGridTextColumn Header="Quantity" Width="0.22*" Binding="{Binding Path=Quantity}" />
-                            <DataGridTextColumn Header="Time" Width="0.4*" Binding="{Binding Path=Time}" />
-                            <DataGridTemplateColumn Header="Status" Width="0.4*" SortMemberPath="Status">
-                                <DataGridTemplateColumn.CellTemplate>
-                                    <DataTemplate>
-                                        <Border Padding="4,1,4,3" CornerRadius="3" Background="{Binding Status, Converter={StaticResource OrderStatusToBrush}}" HorizontalAlignment="Left" VerticalAlignment="Center">
-                                            <TextBlock Text="{Binding Status}" Foreground="#EFFF" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" VerticalAlignment="Center" FontSize="12"/>
-                                        </Border>
-                                    </DataTemplate>
-                                </DataGridTemplateColumn.CellTemplate>
-                            </DataGridTemplateColumn>
+                            <DataGridTextColumn Header="Fill ID" Width="0.12*" Binding="{Binding Path=FillId}" />
+                            <DataGridTextColumn Header="Quantity" Width="0.15*" Binding="{Binding Path=FillQuantity}" />
+                            <DataGridTextColumn Header="Price" Width="0.15*" Binding="{Binding Path=FillPrice}" />
+                            <DataGridTextColumn Header="Time" Width="0.15*" Binding="{Binding Path=FillDatetime}" />
+                            <DataGridTextColumn Header="Type" Width="0.2*" Binding="{Binding Path=FillType}" />
                         </DataGrid.Columns>
                     </DataGrid>
                 </DockPanel>
