--- a/TradeHubGui/Views/StrategyRunnerView.xaml
+++ b/TradeHubGui/Views/StrategyRunnerView.xaml
@@ -26,23 +26,23 @@
 
         <Grid Grid.Column="0" Margin="20,20,5,20">
             <Border Style="{StaticResource ContentBorderStyle}"/>
-            <DockPanel Grid.Row="0" Margin="10">
-                <TextBlock DockPanel.Dock="Top" Margin="10,0" Text="STRATEGIES" Style="{StaticResource HeaderTextBlockStyle}"/>
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition MinHeight="80" Height="0.7*"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition MinHeight="80"/>
+                </Grid.RowDefinitions>
+                
+                <DockPanel Grid.Row="0" Margin="10,10,10,0">
+                    <TextBlock DockPanel.Dock="Top" Margin="10,0" Text="STRATEGIES" Style="{StaticResource HeaderTextBlockStyle}"/>
 
-                <Button DockPanel.Dock="Top" HorizontalAlignment="Left" MinWidth="60" Style="{StaticResource ButtonToolBar}" Focusable="False" Margin="10,20,2,0"
+                    <Button DockPanel.Dock="Top" HorizontalAlignment="Left" MinWidth="60" Style="{StaticResource ButtonToolBar}" Focusable="False" Margin="10,16,10,0"
                         Command="{Binding LoadStrategyCommand}">
-                    <StackPanel Orientation="Horizontal" Margin="4,0">
-                        <Image Width="16" Height="16" Margin="0,0,4,0" Source="{StaticResource imgFolder}" UseLayoutRounding="True"/>
-                        <TextBlock Text="Load strategy"/>
-                    </StackPanel>
-                </Button>
-
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="0.5*"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition/>
-                    </Grid.RowDefinitions>
+                        <StackPanel Orientation="Horizontal" Margin="4,0">
+                            <Image Width="16" Height="16" Margin="0,0,4,0" Source="{StaticResource imgFolder}" UseLayoutRounding="True"/>
+                            <TextBlock Text="Load strategy"/>
+                        </StackPanel>
+                    </Button>
 
                     <ListBox Name="StrategiesListBox" BorderThickness="1" BorderBrush="#EEE" Background="WhiteSmoke" Margin="10,5,10,0" Padding="0" 
                              SelectedItem="{Binding SelectedStrategy}" ItemsSource="{Binding Strategies}">
@@ -129,32 +129,32 @@
                             </DataTemplate>
                         </ListBox.ItemTemplate>
                     </ListBox>
+                </DockPanel>
 
-                    <GridSplitter Grid.Row="1" ResizeDirection="Rows"/>
+                <GridSplitter Grid.Row="1" ResizeDirection="Rows"/>
 
-                    <DockPanel Grid.Row="2">
-                        <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="10,20,0,-10">
-                            <Button MinWidth="60" Style="{StaticResource ButtonToolBar}" Focusable="False" Margin="0,0,2,0" HorizontalAlignment="Left"
+                <DockPanel Grid.Row="2" Margin="10,0">
+                    <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="10,20,0,0">
+                        <Button MinWidth="60" Style="{StaticResource ButtonToolBar}" Focusable="False" Margin="0,0,2,0" HorizontalAlignment="Left"
                                     Command="{Binding ShowCreateInstanceWindowCommand}">
-                                <StackPanel Orientation="Horizontal" Margin="4,0">
-                                    <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgAdd}" UseLayoutRounding="True"/>
-                                    <TextBlock Text="Create instance" />
-                                </StackPanel>
-                            </Button>
+                            <StackPanel Orientation="Horizontal" Margin="4,0">
+                                <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgAdd}" UseLayoutRounding="True"/>
+                                <TextBlock Text="Create instance" />
+                            </StackPanel>
+                        </Button>
 
-                            <Button MinWidth="60" Style="{StaticResource ButtonToolBar}" Focusable="False" Margin="0,0,2,0" HorizontalAlignment="Left"
+                        <Button MinWidth="60" Style="{StaticResource ButtonToolBar}" Focusable="False" Margin="0,0,2,0" HorizontalAlignment="Left"
                                     Command="{Binding ImportInstancesCommand}">
-                                <StackPanel Orientation="Horizontal" Margin="4,0">
-                                    <Image Width="15" Height="15" Margin="0,0,4,0" Source="{StaticResource imgImport}" UseLayoutRounding="True"/>
-                                    <TextBlock Text="Import instances" />
-                                </StackPanel>
-                            </Button>
-                        </StackPanel>
+                            <StackPanel Orientation="Horizontal" Margin="4,0">
+                                <Image Width="15" Height="15" Margin="0,0,4,0" Source="{StaticResource imgImport}" UseLayoutRounding="True"/>
+                                <TextBlock Text="Import instances" />
+                            </StackPanel>
+                        </Button>
+                    </StackPanel>
 
-                        <DataGrid x:Name="StrategyInstancesDataGrid" 
+                    <DataGrid x:Name="StrategyInstancesDataGrid" Margin="10"
                                     ItemsSource="{Binding Instances}"
                                     SelectedItem="{Binding SelectedInstance}"
-                                    Margin="10,20,10,10"
                                     SelectionMode="Single" 
                                     IsTextSearchEnabled="True"
                                     IsSynchronizedWithCurrentItem="True"
@@ -163,71 +163,70 @@
                                     IsReadOnly="False"
                                     SelectionUnit="FullRow"
                                     AutoGenerateColumns="False">
-                            <DataGrid.Columns>
-                                <DataGridTemplateColumn Header="Key" Width="0.3*" SortMemberPath="InstanceKey" IsReadOnly="True">
-                                    <DataGridTemplateColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <Border Padding="10,0,8,1" Margin="0,-12" Background="#0FFF" BorderThickness="9,0,0,0" 
+                        <DataGrid.Columns>
+                            <DataGridTemplateColumn Header="Key" Width="0.3*" SortMemberPath="InstanceKey" IsReadOnly="True">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Border Padding="10,0,8,1" Margin="0,-12" Background="#0FFF" BorderThickness="9,0,0,0" 
                                                     BorderBrush="{Binding Status, Converter={StaticResource StatusToBrush}}">
-                                                <TextBlock Text="{Binding InstanceKey}" Foreground="{Binding BorderBrush, RelativeSource={RelativeSource AncestorType=Border}}" 
+                                            <TextBlock Text="{Binding InstanceKey}" Foreground="{Binding BorderBrush, RelativeSource={RelativeSource AncestorType=Border}}" 
                                                          FontWeight="SemiBold" FontSize="16" VerticalAlignment="Center"/>
-                                            </Border>
-                                        </DataTemplate>
-                                    </DataGridTemplateColumn.CellTemplate>
-                                </DataGridTemplateColumn>
-                                <DataGridTextColumn Header="Description" Width="0.5*" Binding="{Binding Path=Description}" IsReadOnly="False"/>
-                                <DataGridTemplateColumn Header="Status" Width="0.2*" IsReadOnly="True">
-                                    <DataGridTemplateColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <Border Padding="4,1,4,3" CornerRadius="3" Background="{Binding Status, Converter={StaticResource StatusToBrush}}" HorizontalAlignment="Left" VerticalAlignment="Center">
-                                                <TextBlock Text="{Binding Status}" Foreground="#EFFF" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" VerticalAlignment="Center" FontSize="12"/>
-                                            </Border>
-                                        </DataTemplate>
-                                    </DataGridTemplateColumn.CellTemplate>
-                                </DataGridTemplateColumn>
-                                <DataGridTemplateColumn Header="Actions" Width="122" IsReadOnly="True">
-                                    <DataGridTemplateColumn.CellTemplate>
-                                        <DataTemplate>
-                                            <StackPanel Grid.Column="3" Orientation="Horizontal" HorizontalAlignment="Right">
-                                                <Grid>
-                                                    <Button Focusable="False" Width="60" Margin="0,2,4,2" Height="22"
+                                        </Border>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                            <DataGridTextColumn Header="Description" Width="0.5*" Binding="{Binding Path=Description}" IsReadOnly="False"/>
+                            <DataGridTemplateColumn Header="Status" Width="0.2*" IsReadOnly="True">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Border Padding="4,1,4,3" CornerRadius="3" Background="{Binding Status, Converter={StaticResource StatusToBrush}}" HorizontalAlignment="Left" VerticalAlignment="Center">
+                                            <TextBlock Text="{Binding Status}" Foreground="#EFFF" FontWeight="SemiBold" Typography.Capitals="AllSmallCaps" VerticalAlignment="Center" FontSize="12"/>
+                                        </Border>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                            <DataGridTemplateColumn Header="Actions" Width="122" IsReadOnly="True">
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <StackPanel Grid.Column="3" Orientation="Horizontal" HorizontalAlignment="Right">
+                                            <Grid>
+                                                <Button Focusable="False" Width="60" Margin="0,2,4,2" Height="22"
                                                             Command="{Binding DataContext.RunInstanceCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
                                                             Visibility="{Binding Status, Converter={StaticResource ExecutionStatusToVisibility}}">
-                                                        <StackPanel Orientation="Horizontal">
-                                                            <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgStart}"/>
-                                                            <TextBlock Text="Start"/>
-                                                        </StackPanel>
-                                                    </Button>
-                                                    <Button Focusable="False" Width="60" Margin="0,2,4,2" Height="22"
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <Image Width="11" Height="11" Margin="0,0,4,0" Source="{StaticResource imgStart}"/>
+                                                        <TextBlock Text="Start"/>
+                                                    </StackPanel>
+                                                </Button>
+                                                <Button Focusable="False" Width="60" Margin="0,2,4,2" Height="22"
                                                             Command="{Binding DataContext.StopInstanceCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
                                                             Visibility="{Binding Status, Converter={StaticResource ExecutionStatusToVisibility}, ConverterParameter=Invert}">
-                                                        <StackPanel Orientation="Horizontal">
-                                                            <Image Width="9" Height="9" Margin="0,0,6,0" Source="{StaticResource imgStop}"/>
-                                                            <TextBlock Text="Stop"/>
-                                                        </StackPanel>
-                                                    </Button>
-                                                </Grid>
+                                                    <StackPanel Orientation="Horizontal">
+                                                        <Image Width="9" Height="9" Margin="0,0,6,0" Source="{StaticResource imgStop}"/>
+                                                        <TextBlock Text="Stop"/>
+                                                    </StackPanel>
+                                                </Button>
+                                            </Grid>
 
-                                                <Button Name="ButtonEditInstance" Style="{StaticResource ButtonToolBar}" Focusable="False" ToolTip="Edit instance" 
+                                            <Button Name="ButtonEditInstance" Style="{StaticResource ButtonToolBar}" Focusable="False" ToolTip="Edit instance" 
                                                         IsEnabled="{Binding Status, Converter={StaticResource StatusToBool}}"
                                                         Command="{Binding DataContext.ShowEditInstanceWindowCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}">
-                                                    <Image Width="13" Height="13" Margin="3,2,1,2" Source="{StaticResource imgEdit}" UseLayoutRounding="True"/>
-                                                </Button>
+                                                <Image Width="13" Height="13" Margin="3,2,1,2" Source="{StaticResource imgEdit}" UseLayoutRounding="True"/>
+                                            </Button>
 
-                                                <Button Style="{StaticResource ButtonToolBar}" Focusable="False" ToolTip="Delete instance"
+                                            <Button Style="{StaticResource ButtonToolBar}" Focusable="False" ToolTip="Delete instance"
                                                         IsEnabled="True"
                                                         Command="{Binding DataContext.DeleteInstanceCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}">
-                                                    <Image Width="12" Height="12" Margin="2" Source="{StaticResource imgDelete}" UseLayoutRounding="True"/>
-                                                </Button>
-                                            </StackPanel>
-                                        </DataTemplate>
-                                    </DataGridTemplateColumn.CellTemplate>
-                                </DataGridTemplateColumn>
-                            </DataGrid.Columns>
-                        </DataGrid>
-                    </DockPanel>
-                </Grid>
-            </DockPanel>
+                                                <Image Width="12" Height="12" Margin="2" Source="{StaticResource imgDelete}" UseLayoutRounding="True"/>
+                                            </Button>
+                                        </StackPanel>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
+                        </DataGrid.Columns>
+                    </DataGrid>
+                </DockPanel>
+            </Grid>
         </Grid>
 
         <GridSplitter Grid.Column="1" ResizeDirection="Columns"/>
@@ -236,13 +235,12 @@
             <Border Style="{StaticResource ContentBorderStyle}"/>
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition MinHeight="80"/>
+                    <RowDefinition MinHeight="80" Height="0.7*"/>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition MinHeight="80"/>
                 </Grid.RowDefinitions>
 
-
-                <DockPanel Grid.Row="0" Margin="10">
+                <DockPanel Grid.Row="0" Margin="10,10,10,0">
                     <DockPanel DockPanel.Dock="Top">
                         <TextBlock DockPanel.Dock="Left" Margin="10,0" Text="EXECUTION DETAILS" Style="{StaticResource HeaderTextBlockStyle}"/>
 
@@ -250,7 +248,7 @@
                                       IsChecked="{Binding ExecutionDetailsForAllInstances}"/>
                     </DockPanel>
 
-                    <DataGrid x:Name="ExecutionDetailsDataGrid" Margin="10,22,10,10"
+                    <DataGrid x:Name="ExecutionDetailsDataGrid" Margin="10,16,10,0"
                               ItemsSource="{Binding ExecutionDetailsCollection}"
                               SelectedItem="{Binding SelectedExecutionDetails}"
                               SelectionMode="Single" 
@@ -274,17 +272,13 @@
 
                 <GridSplitter Grid.Row="1" ResizeDirection="Rows" />
 
-
-                <DockPanel Grid.Row="2" Margin="10">
-                    <!--<TextBlock DockPanel.Dock="Top" Margin="10,0" 
-                               Text="{Binding Path=SelectedExecutionDetails.Key, StringFormat='Orders {0}', FallbackValue='Orders'}" 
-                               Style="{StaticResource SubHeaderTextBlockStyle}"/>-->
+                <DockPanel Grid.Row="2" Margin="10,20,10,10">
                     <StackPanel DockPanel.Dock="Top" Margin="10,0" Orientation="Horizontal">
                         <TextBlock Text="Orders" Style="{StaticResource SubHeaderTextBlockStyle}" Margin="0,0,6,0"/>
                         <TextBlock Text="{Binding Path=SelectedExecutionDetails.Key}" Style="{StaticResource SubHeaderTextBlockStyle}" FontWeight="SemiBold"/>
                     </StackPanel>
 
-                    <DataGrid x:Name="OrdersDataGrid" Margin="10,20,10,10"
+                    <DataGrid x:Name="OrdersDataGrid" Margin="10"
                               ItemsSource="{Binding OrderDetailsCollection}"
                               SelectionMode="Single" 
                               IsTextSearchEnabled="True"
